--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,7 @@ upload_speed = 2000000
 monitor_port = /dev/cu.SLAB_USBtoUART
 upload_port= /dev/cu.SLAB_USBtoUART
 
+lib_deps = 
+     https://github.com/kochcodes/ESP32GithubOTA_lib.git
 
     
